--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,10 +6,17 @@
             "command": "C:\\msys64\\ucrt64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
+                "-std=c++20",
+                "-I${workspaceFolder}/include",
+                "-L${workspaceFolder}/lib",
                 "-g",
-                "${file}",
+                //"${file}",
+                "${workspaceFolder}/src/main.cpp",
+                "${workspaceFolder}/src/glad.c",
+                "-lglfw3dll",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                
             ],
             "options": {
                 "cwd": "${fileDirname}"
