--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,7 @@
                 //"${file}",
                 "${workspaceFolder}/src/main2.cpp",
                 "${workspaceFolder}/src/glad.c",
+                "${workspaceFolder}/src/shader.h",
                 "-lglfw3dll",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
